tests/rascal/negative/type_errors/L1/20_expression_ES10_D4_34.ob
MODULE Test20;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               p := ((+ (- (1223 * 1))) > ((- (- y)) - ((1 - z) MOD (- 1))));
               z := ((((0 - y) * (200 DIV z)) + ((z * 0) MOD (0 DIV 0))) - (((2 + 0) MOD (- 1)) * (- (- 1))));
               z := ((((+ y) DIV (y - 1223)) + ((x MOD y) MOD (+ 2))) MOD (((z DIV 1223) - (1 * 1)) - ((+ z) * (z + x))));
               x := (- (- ((+ x) DIV (2 + z))));
               z := (+ (((200 + 1) MOD (200 * 2)) DIV (+ (0 - y))));
               x := ((((z - x) + (1 MOD 1223)) MOD ((0 * y) * (z MOD 2))) + ((- (1223 MOD 1223)) - (+ (2 * y))));
               y := (+ (((2 DIV 0) MOD (y - y)) + ((- x) MOD (1 + 0))));
               p := ((- ((2 - y) * (z - 1))) <= ((+ (- 1223)) DIV ((2 + 200) + (y + z))));
               x := ((((y - 2) + (+ z)) + ((0 MOD y) MOD (- 1))) MOD ((+ (- 2)) - ((0 * y) + (1 MOD y))));
  (* error *)  x := (- (((p - 0) MOD (y + 2)) - (+ (200 - x))))
END Test20.